or be removed.  They are categorized by the release in which
deprecation was first announced.  If the inteface change involved a
removal or transition, both the original and new interface names are
generally listed for reference.

Items marked with a "'" (single quote) are undocumented and may be
removed at any time.

7.28
----
include/bu/malloc.h
        bu_ck_malloc_ptr, bu_mem_barriercheck [deprecated 7.28]

include/vmath.h
        VCOMB3, VCOMB3N, VJOIN4
        Removed as inconsistent and unused API [deprecated 7.28]

MGED commands
	?devel, ?lib, aproposdevel, aproposlib, %, animmate, db_glob,
	debugbu, debugdir, debuglib, debugmem, debugnmg, expand,
	loadtk, match, memprint, preview, regdebug, regdef, rmats, rrt,
	savekey, shaded_mode, sync
	Removed as part of distillation effort [deprecated 7.28]

7.26
----
ray tracing tools
	lgt : functionally replaced by nirt
	rtcell', rtfrac', rtpp, rtrad', rtrange, rtray, rtregis
	Removed as part of distillation effort [deprecated 7.26]
converter tools
	cy-g, euclid-g, euclid_format', euclid_unformat', g-euclid,
	g-euclid1', g-tankill, intaval-g.py, viewpoint-g : obsolete formats
	plot3-X, plot3-hpgl, plot3-tek : obsolete interface, see overlay command
	plot3debug, xyz-plot3 : see plot3-asc,asc-plot3
	bot-bldxf', bot_shell-vtk, g-nmg, nmg-bot, nmg-rib, nmg-sgp',
	poly-bot, rt_bot_faces, : primitive-specific converters
	Removed as part of distillation effort [deprecated 7.26]
image tools
	cmap-fb, fb-cmap, fbcmrot : colormap support obsolete
	fbed, cell-fb : outside scope
	fbscanplot, polar-fb, pp-fb, bw-imp, pixinfo.sh : obsolete
	png_info : incorporating into icv
	pixpaste : outside scope, license
	alias-pix' : incorporating into icv
	asc2pix' : incorporating into icv
	pix-yuv', yuv-pix' : obsolete non-standard format
	texturescale : obsolete implementation
	Removed as part of distillation effort [deprecated 7.26]
video & animation tools
	anim_*', fbanim, chan_add', chan_mult, chan_permute,
	pixflip-fb' : outside scope